3-network-policies/kubernetes/web-app/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: task-3-namespace
spec:
  type: NodePort
  ports:
  - nodePort: 30001
    port: 3000
    targetPort: 3000
  selector:
    app: web-app-pod
